--- a/src/coursify-ai/my_templates/content.html
+++ b/src/coursify-ai/my_templates/content.html
@@ -219,8 +219,7 @@
 
         document.getElementById("downloadLink").href =
           "{{ url_for('get_pdf', filename='') }}" + filename;
-        document.getElementById("PreviewLink").href =
-          "{{ url_for('preview', filename='') }}" + filename;
+          document.getElementById("PreviewLink").href = `/preview/${encodeURIComponent(filename)}`;
 
         var quizButtonContainer = document.getElementById(
           "quizButtonContainer"
