--- a/src/coursify-ai/my_templates/preview.html
+++ b/src/coursify-ai/my_templates/preview.html
@@ -17,25 +17,43 @@
             href="{{ url_for('static', filename='styleIndex.css') }}"
     />
     <style>
+        /* Override body background for preview page */
+        body {
+            background: #ffffff !important; /* Force white background for preview */
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background: #808080 !important; /* Keep header gray */
+        }
+
         #preview-container {
             width: 95%;
-            height: calc(100vh - 250px);
+            max-width: 1400px;
+            height: calc(100vh - 180px);
             margin: 20px auto;
-            border: 1px solid #ccc;
+            background: #ffffff;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             border-radius: 8px;
             overflow: hidden;
-            background: white;
         }
+
         #preview-iframe {
             width: 100%;
             height: 100%;
             border: none;
+            background: #ffffff;
         }
+
         .preview-message {
             text-align: center;
             padding: 50px;
             font-size: 18px;
+            background: #ffffff;
+            color: #333;
         }
+
         .download-button {
             display: inline-block;
             padding: 12px 30px;
@@ -45,14 +63,25 @@
             border-radius: 5px;
             margin-top: 20px;
             font-weight: 500;
+            cursor: pointer;
+            border: none;
         }
+
         .download-button:hover {
             background: #45a049;
         }
+
         .content-header {
             text-align: center;
             padding: 20px;
+            background: #ffffff;
+            color: #333;
         }
+
+        .content-header h1 {
+            color: #333;
+        }
+
         #back-button {
             padding: 10px 20px;
             background: #2196F3;
@@ -62,14 +91,22 @@
             cursor: pointer;
             font-size: 14px;
         }
+
         #back-button:hover {
             background: #0b7dda;
         }
+
         #loading {
             text-align: center;
             padding: 40px;
             font-size: 16px;
             color: #666;
+            background: #ffffff;
+        }
+
+        #footer {
+            background: #808080;
+            color: white;
         }
     </style>
 </head>
