--- a/src/coursify-ai/my_templates/preview.html
+++ b/src/coursify-ai/my_templates/preview.html
@@ -6,114 +6,12 @@
     <title>File Preview - Coursify.ai</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500&display=swap" rel="stylesheet" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='styleIndex.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylePreview.css') }}" />
 
     <!-- Add Mammoth.js for DOCX rendering -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.6.0/mammoth.browser.min.js"></script>
 
-    <style>
-        body {
-            background: #ffffff !important;
-            margin: 0;
-            padding: 0;
-        }
 
-        header {
-            background: #808080 !important;
-        }
-
-        #preview-container {
-            width: 95%;
-            max-width: 1400px;
-            height: calc(100vh - 180px);
-            margin: 20px auto;
-            background: #ffffff;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            border-radius: 8px;
-            overflow-y: auto;
-            padding: 20px;
-        }
-
-        #preview-iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            background: #ffffff;
-        }
-
-        #preview-content {
-            width: 100%;
-            height: 100%;
-            background: white;
-            padding: 30px;
-            overflow-y: auto;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        .preview-message {
-            text-align: center;
-            padding: 50px;
-            font-size: 18px;
-            background: #ffffff;
-            color: #333;
-        }
-
-        .download-button {
-            display: inline-block;
-            padding: 12px 30px;
-            background: #4CAF50;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-            font-weight: 500;
-            cursor: pointer;
-            border: none;
-        }
-
-        .download-button:hover {
-            background: #45a049;
-        }
-
-        .content-header {
-            text-align: center;
-            padding: 20px;
-            background: #ffffff;
-            color: #333;
-        }
-
-        .content-header h1 {
-            color: #333;
-        }
-
-        #back-button {
-            padding: 10px 20px;
-            background: #2196F3;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-        }
-
-        #back-button:hover {
-            background: #0b7dda;
-        }
-
-        #loading {
-            text-align: center;
-            padding: 40px;
-            font-size: 16px;
-            color: #666;
-            background: #ffffff;
-        }
-
-        #footer {
-            background: #808080;
-            color: white;
-        }
-    </style>
 </head>
 <body>
 <header class="header">
